# speckles

./: .gitignore  LICENSE  README.md  fft.tiff  firstrun.py  instructions.md  new_speckle_image.tiff  new_speckle_pattern.tiff  newpatternimage.py  pyproject.toml  randspeckles.py  speckle_image.tiff  testingfile.py  to-do.md
examples/: example_script_one.py  example_script_two.py
src/: alternate_speckle_generation.py  circular_speckles.py  example_script_one.py  gridgeneration.py  newpattern.py  newpatternimage.py  speckle_generation.py  specklegen.py
src/examples/: example_script_one.py  example_script_two.py
src/speckles/: __init__.py  alternate_pattern.py  circular_speckles.py  fft.py  pattern.py  speckle_generator.py
src/speckles.egg-info/: PKG-INFO  SOURCES.txt
src/speckles_afw39.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
